<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:id="@+id/sign_up_frame">

    <TextView
        android:id="@+id/title"
        android:text="@string/sign_up_title"
        android:textSize="50sp"
        android:layout_marginTop="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:id="@+id/sign_up_email_field_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/login_email"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="@+id/sign_up_email"
        app:layout_constraintRight_toRightOf="@+id/sign_up_email"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:autofillHints="Email Address"
        android:hint="@string/login_email_address_field"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_field_text"
        android:fontFamily="sans-serif-light"
        />

    <TextView
        android:id="@+id/Password_field_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/login_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email"
        app:layout_constraintLeft_toLeftOf="@+id/sign_up_password"
        app:layout_constraintRight_toRightOf="@+id/sign_up_password"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password_star"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/Password_field_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="sans-serif-light"
        />

    <TextView
        android:id="@+id/sign_up_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
        app:layout_constraintLeft_toLeftOf="@+id/sign_up_password_confirm"
        app:layout_constraintRight_toRightOf="@+id/sign_up_password_confirm"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        />

    <EditText
        android:id="@+id/sign_up_password_confirm"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:autofillHints="Confirm Password"
        android:inputType="textPassword"
        android:hint="@string/password_star"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="sans-serif-light"
        />

    <Button
        android:id="@+id/sign_up_confirm_button"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_confirm"
        app:layout_constraintLeft_toLeftOf="@+id/sign_up_password_confirm"
        app:layout_constraintRight_toRightOf="@+id/sign_up_password_confirm"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>