<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp">

    <TextView
        android:id="@+id/log_weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_weight_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50sp"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600sp"
        app:layout_constraintTop_toBottomOf="@+id/log_weight_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrolling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/weight_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="@id/scrolling"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter your weight"
                android:hint="@string/enter_your_weight"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/weight_section_title"
                android:layout_marginStart="80sp"
                android:layout_marginEnd="80sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/units"
                android:layout_marginTop="50sp"
                app:layout_constraintTop_toBottomOf="@id/weight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                />

            <RadioGroup
                android:id="@+id/units_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/units"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/lb"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pounds_lbs"
                    />

                <RadioButton
                    android:id="@+id/kg"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilograms_kg"
                    />

            </RadioGroup>

            <TextView
                android:id="@+id/date_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:layout_marginTop="30sp"
                app:layout_constraintTop_toBottomOf="@id/units_radio"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/date_section_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                />

            <TextView
                android:id="@+id/time_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:layout_marginTop="30sp"
                app:layout_constraintTop_toBottomOf="@id/date_picker"
                app:layout_constraintBottom_toTopOf="@id/time_picker"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                />

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:layout_constraintTop_toBottomOf="@+id/time_section_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:timePickerMode="spinner"
                />

            <Button
                android:id="@+id/submit"
                android:text="@string/log_weight"
                android:layout_marginTop="30sp"
                app:layout_constraintTop_toBottomOf="@id/time_picker"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/scrolling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>